jlamontSC-test/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rC_Connect__Backorder_Quantity__c</fullName>
        <description>Total number of items backordered for open requests</description>
        <inlineHelpText>Total number of items backordered for open requests.</inlineHelpText>
        <label>Backorder Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Check_Inventory_Levels__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true, then any awards will be checked against inventory levels, if the inventory levels become less than 0, the award will fail. Uncheck to allow the award of items when no inventory is available.</description>
        <inlineHelpText>If true, then any awards will be checked against inventory levels, if the inventory levels become less than 0, the award will fail. Uncheck to allow the award of items when no inventory is available.</inlineHelpText>
        <label>Check Inventory Levels @Deprecated(2.1)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Inventory_Available__c</fullName>
        <description>Auto-calculated by Formula, based upon other inventory fields., provides the Inventory amount available for this Product. This will supersede &quot;rC_Invetory_Inventory_Available__c&quot; field,we have added &quot;rC_Inventory__Inventory_On_Hold__c&quot;</description>
        <formula>rC_Inventory__Inventory_Received__c + rC_Inventory__Inventory_Returned__c + rC_Inventory__Inventory_Override__c - (rC_Inventory__Inventory_Sold__c + rC_Inventory__Inventory_Shipped__c + rC_Inventory__Inventory_On_Hold__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total number of items available in Inventory.</inlineHelpText>
        <label>Inventory Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Entry_Fee__c</fullName>
        <description>Specify the event entry fee.</description>
        <inlineHelpText>Specify the event entry fee.</inlineHelpText>
        <label>Entry Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Acknowledgement_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the receiver need to acknowledge receipt of this item?</description>
        <inlineHelpText>Does the receiver need to acknowledge receipt of this item?</inlineHelpText>
        <label>Acknowledgment Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Affiliation__c</fullName>
        <description>Manually populated, this field indicates the Affiliation using this &quot;Item/Package&quot;.</description>
        <inlineHelpText>Affiliation using this &quot;Item/Package&quot;.</inlineHelpText>
        <label>Affiliation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sierra Club</fullName>
                    <default>true</default>
                    <label>Sierra Club</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Giving__Archive_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</description>
        <inlineHelpText>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</inlineHelpText>
        <label>Archive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Charge_Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates whether shipping is being charged.</description>
        <inlineHelpText>This indicates whether shipping is being charged.</inlineHelpText>
        <label>Charge Shipping?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Copy_Status__c</fullName>
        <description>What is the status of the copy for this Premium? Used in generation of script to help pitch item/package to donor (Pitcher Script)</description>
        <inlineHelpText>What is the status of the copy for this Premium? Used in generation of script to help pitch item/package to donor (Pitcher Script)</inlineHelpText>
        <label>Copy Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Info</fullName>
                </value>
                <value>
                    <fullName>Copy on Its Way</fullName>
                </value>
                <value>
                    <fullName>Info/Copy on-Hand</fullName>
                </value>
                <value>
                    <fullName>Being Written</fullName>
                </value>
                <value>
                    <fullName>Sent for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Being Proofed</fullName>
                </value>
                <value>
                    <fullName>To Be Printed</fullName>
                </value>
                <value>
                    <fullName>Printed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Giving__Copy_Summary__c</fullName>
        <description>Short summary of the copy. Used in generation of script to help pitch item/package to donor (Pitcher Script)</description>
        <inlineHelpText>Short summary of the copy. Used in generation of script to help pitch item/package to donor (Pitcher Script)</inlineHelpText>
        <label>Copy Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Copy_Text__c</fullName>
        <description>Full text of copy. Used in generation of script to help pitch item/package to donor (Pitcher Script)</description>
        <inlineHelpText>Full text of copy. Used in generation of script to help pitch item/package to donor (Pitcher Script)</inlineHelpText>
        <label>Copy Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Delivery_Method__c</fullName>
        <description>Manually populated field indicating the method used to deliver a giving item.</description>
        <inlineHelpText>Method used to deliver a giving item.</inlineHelpText>
        <label>Delivery Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Will Call</fullName>
                </value>
                <value>
                    <fullName>Billing Address</fullName>
                </value>
                <value>
                    <fullName>Shipping Address</fullName>
                </value>
                <value>
                    <fullName>Mailing Address</fullName>
                </value>
                <value>
                    <fullName>Other Address</fullName>
                </value>
                <value>
                    <fullName>In Person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Giving__Display_Order__c</fullName>
        <description>Allows you to choose order of visual display for items of the same type (e.g. T-Shirt: S,M,L,XL)</description>
        <inlineHelpText>Allows you to choose order of visual display for items of the same type (e.g. T-Shirt: S,M,L,XL)</inlineHelpText>
        <label>Display Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__End_Date__c</fullName>
        <description>End date of premium availability</description>
        <inlineHelpText>End date of premium availability</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__FMV__c</fullName>
        <description>Fair Market Value</description>
        <inlineHelpText>Fair Market Value</inlineHelpText>
        <label>FMV</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Freight_Cost__c</fullName>
        <description>Cost to us of shipping item from supplier to inventory storage location.</description>
        <inlineHelpText>Cost to us of shipping item from supplier to inventory storage location.</inlineHelpText>
        <label>Freight Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Fulfilment_Details__c</fullName>
        <description>Restrictions/Instructions for Item ordering. e.g. Must be ordered in multiples of 10.</description>
        <inlineHelpText>Restrictions/Instructions for Item ordering. e.g. Must be ordered in multiples of 10.</inlineHelpText>
        <label>Fulfilment Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Full_Description__c</fullName>
        <description>This is what follows the &quot;For a donation of:&quot; header on the Pitcher Script.</description>
        <inlineHelpText>This is what follows the &quot;For a donation of:&quot; header on the Pitcher Script.</inlineHelpText>
        <label>Full Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rC_Giving__ISBN__c</fullName>
        <description>&quot;Manually populated field displaying the |
International Standard Book Number (ISBN) is a unique numeric commercial book identifier based upon the 9-digit Standard Book Numbering (SBN)</description>
        <inlineHelpText>International Standard Book Number (ISBN) is a unique numeric commercial book identifier based upon the 9-digit Standard Book Numbering (SBN)</inlineHelpText>
        <label>ISBN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Image_FileName__c</fullName>
        <description>Location of image file used in generation of image url</description>
        <inlineHelpText>Location of image file used in generation of image url</inlineHelpText>
        <label>Image FileName</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Image_URL_For_Thumbnail__c</fullName>
        <description>Manually populated, this field contqins the location of Image Thumbnail file.</description>
        <inlineHelpText>Location of Image Thumbnail file.</inlineHelpText>
        <label>Image URL For Thumbnail</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Image_URL__c</fullName>
        <description>Location of Image file</description>
        <formula>/*pub image format https://c.na7.content.force.com/servlet/servlet.ImageServer?id=015A0000001RkhLIAS&amp;oid=00DA00000009dls */
IF(LEN(rC_Giving__Image_FileName__c) &gt; 0,
&quot;https://c.na7.content.force.com/servlet/servlet.ImageServer?id=&quot; &amp; rC_Giving__Image_FileName__c &amp; &quot;&amp;oid=00DA00000009dls&quot;,
&apos;No Image&apos;)</formula>
        <inlineHelpText>Location of Image file</inlineHelpText>
        <label>Image URL (@Deprecated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Inventory_Location__c</fullName>
        <description>Warehouse location of items.</description>
        <inlineHelpText>Warehouse location of items.</inlineHelpText>
        <label>Inventory Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Location A</fullName>
                </value>
                <value>
                    <fullName>Location B</fullName>
                </value>
                <value>
                    <fullName>Location C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Giving__Inventory_Type__c</fullName>
        <description>Manually populated, this picklist alows you to indicate an &quot;Inventory Rype.&quot;  &apos;Standard Inventory,&apos; &apos;Direct Shipped&apos; etc.</description>
        <inlineHelpText>Type of Inventory:  &apos;Standard Inventory,&apos; &apos;Direct Shipped&apos; etc.</inlineHelpText>
        <label>Inventory Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Inventory</fullName>
                </value>
                <value>
                    <fullName>Direct / Shipped</fullName>
                </value>
                <value>
                    <fullName>Limited Quantity</fullName>
                </value>
                <value>
                    <fullName>Limited Inventory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Giving__Item_Category__c</fullName>
        <description>Manually populated, this field is dependent on &quot;Item Family&quot; and describes the Type of Item:</description>
        <inlineHelpText>Describes the Type of Item:</inlineHelpText>
        <label>Item Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Family</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Blu-Ray</fullName>
                </value>
                <value>
                    <fullName>Book - Hardback</fullName>
                </value>
                <value>
                    <fullName>Book - Paperback</fullName>
                </value>
                <value>
                    <fullName>By Invitation Only Event</fullName>
                </value>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>Combination Gift Package</fullName>
                </value>
                <value>
                    <fullName>Computer Software</fullName>
                </value>
                <value>
                    <fullName>Coupon</fullName>
                </value>
                <value>
                    <fullName>Digital Download</fullName>
                </value>
                <value>
                    <fullName>DVD</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Hats and Caps</fullName>
                </value>
                <value>
                    <fullName>Logo Item</fullName>
                </value>
                <value>
                    <fullName>Magazine</fullName>
                </value>
                <value>
                    <fullName>Membership</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Mug</fullName>
                </value>
                <value>
                    <fullName>Poster</fullName>
                </value>
                <value>
                    <fullName>Pre-packaged Kit</fullName>
                </value>
                <value>
                    <fullName>Program Guide</fullName>
                </value>
                <value>
                    <fullName>Programming Tune In Card</fullName>
                </value>
                <value>
                    <fullName>Tickets</fullName>
                </value>
                <value>
                    <fullName>Transcript</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Giving__Limits__c</fullName>
        <description>What limits relate to this Premium?</description>
        <inlineHelpText>What limits relate to this Premium?</inlineHelpText>
        <label>Limits</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rC_Giving__List_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a list Premium (i.e. a will-call item)?</description>
        <inlineHelpText>Is this a list Premium (i.e. a will-call item)?</inlineHelpText>
        <label>List Items?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Mobile_Description__c</fullName>
        <description>Description of Premium to be displayed on mobile devices</description>
        <inlineHelpText>Description of Premium to be displayed on mobile devices</inlineHelpText>
        <label>Mobile Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Mobile_Title__c</fullName>
        <description>Item heading for mobile devices</description>
        <inlineHelpText>Item heading for mobile devices</inlineHelpText>
        <label>Mobile Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rC_Giving__No_Confirmation_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Drive Premiums. In the case where a particular premium should not receive a confirmation letter.</description>
        <inlineHelpText>Should a confirmation letter be sent for this Premium?</inlineHelpText>
        <label>No Confirmation Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Not_available_individually__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Item must be included in package.</description>
        <inlineHelpText>Item must be included in package.</inlineHelpText>
        <label>Not available individually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Parent_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manually populated lookup to a &quot;Parent Item&quot; record.</description>
        <inlineHelpText>&quot;Parent Item&quot; record.</inlineHelpText>
        <label>Parent Item</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sub-items</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Pronunciation__c</fullName>
        <description>How do you pronounce any key aspects of this Premium?</description>
        <inlineHelpText>How do you pronounce any key aspects of this Premium?</inlineHelpText>
        <label>Pronunciation</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Qualifying_Payment_Method__c</fullName>
        <description>This Premium is available with only the chosen Payment Method(s).</description>
        <inlineHelpText>This Premium is available with only the chosen Payment Method(s).</inlineHelpText>
        <label>Qualifying Payment Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash/Check</fullName>
                </value>
                <value>
                    <fullName>Charge Card</fullName>
                </value>
                <value>
                    <fullName>Complimentary</fullName>
                </value>
                <value>
                    <fullName>Electronic Funds Transfer</fullName>
                </value>
                <value>
                    <fullName>In Kind</fullName>
                </value>
                <value>
                    <fullName>Life Insurance</fullName>
                </value>
                <value>
                    <fullName>Mutual fund</fullName>
                </value>
                <value>
                    <fullName>PayPal</fullName>
                </value>
                <value>
                    <fullName>Payroll Deduction</fullName>
                </value>
                <value>
                    <fullName>Personal Property</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Stock</fullName>
                </value>
                <value>
                    <fullName>Vehicle Giving</fullName>
                </value>
                <value>
                    <fullName>eCoupons</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Giving__Secondary_Location__c</fullName>
        <description>Location of additional inventory</description>
        <inlineHelpText>Location of additional inventory</inlineHelpText>
        <label>Secondary Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In House</fullName>
                </value>
                <value>
                    <fullName>In House - Cabinet</fullName>
                </value>
                <value>
                    <fullName>In House - Cage</fullName>
                </value>
                <value>
                    <fullName>In House - Premium Closet</fullName>
                </value>
                <value>
                    <fullName>Magazine</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rC_Giving__Shipping_Charge__c</fullName>
        <description>Amount to charge donor for shipping</description>
        <inlineHelpText>Amount to charge donor for shipping</inlineHelpText>
        <label>Shipping Charge</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Shipping_and_Handling_Cost__c</fullName>
        <description>Cost to us of shipping (and handling) item to donor</description>
        <inlineHelpText>Cost to us of shipping (and handling) item to donor</inlineHelpText>
        <label>Shipping &amp; Handling Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Special_Notes__c</fullName>
        <description>Manually populated, this field records comments or notes about the Item or Package.</description>
        <inlineHelpText>Comments or notes about the Item or Package.</inlineHelpText>
        <label>Special Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Start_Date__c</fullName>
        <description>Date Package/Item is available from</description>
        <inlineHelpText>Date Package/Item is available from</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Thumbnail_Image__c</fullName>
        <description>Populated by Formula, displays a &quot;Thumbnail Image&quot; of the Item.</description>
        <formula>IF(NOT(ISBLANK(rC_Giving__Image_URL_For_Thumbnail__c)), IMAGE(rC_Giving__Image_URL_For_Thumbnail__c,&quot;Thumbnail&quot;,256,256), &quot;URL Not Found&quot; )</formula>
        <inlineHelpText>&quot;Thumbnail Image&quot; of Item.</inlineHelpText>
        <label>Thumbnail Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Ticket_Date__c</fullName>
        <description>Used for Drive Premium Ticket Giveaways - i.e. on what day is the event occurring for which the ticket is valid?</description>
        <inlineHelpText>Used for Drive Premium Ticket Giveaways - i.e. on what day is the event occurring for which the ticket is valid?</inlineHelpText>
        <label>Ticket Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__UPC__c</fullName>
        <description>Universal Product Code</description>
        <inlineHelpText>Universal Product Code</inlineHelpText>
        <label>UPC</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Unit_Cost__c</fullName>
        <description>Manually populated, displays the &quot;Unit Cost&quot; of an Item.</description>
        <inlineHelpText>&quot;Unit Cost&quot; of an Item.</inlineHelpText>
        <label>Unit Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Vendor_Reference_Number__c</fullName>
        <description>Code/Number that vendor uses to refer to Item</description>
        <inlineHelpText>Code/Number that vendor uses to refer to Item</inlineHelpText>
        <label>Vendor Reference #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is lookup for Vendor / Underwriter.</description>
        <inlineHelpText>This is lookup for Vendor / Underwriter.</inlineHelpText>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>ProductsOffered</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Inventory__Check_Inventory_Levels__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated, used to check inventory if item can be awarded. To award item when no inventory is available, uncheck field.</description>
        <inlineHelpText>Used to check inventory if item can be awarded. To award item when no inventory is available, uncheck field.</inlineHelpText>
        <label>Check Inventory Levels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Inventory__Inventory_Available__c</fullName>
        <description>Auto-calculated by Formula, based upon other inventory fields., provides the Inventory amount available for this Product.</description>
        <formula>rC_Inventory__Inventory_Received__c +  rC_Inventory__Inventory_Returned__c + rC_Inventory__Inventory_Override__c - (rC_Inventory__Inventory_Sold__c  + rC_Inventory__Inventory_Shipped__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Inventory amount available for this Product.</inlineHelpText>
        <label>Inventory Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Inventory__Inventory_On_Hand__c</fullName>
        <description>Populated by formula, provides the amount of inventory current in stock plus ordered.</description>
        <formula>(  rC_Inventory__Inventory_Received__c +  rC_Inventory__Inventory_Returned__c +  rC_Inventory__Inventory_Override__c ) -  rC_Inventory__Inventory_Shipped__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The amount of inventory current in stock plus ordered.</inlineHelpText>
        <label>Inventory On Hand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Inventory__Inventory_On_Hold__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Manually populated, indicates no action defined, Inventory is held for future changes.</description>
        <inlineHelpText>No action defined, Inventory is held for future changes.</inlineHelpText>
        <label>Inventory  On Hold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Inventory__Inventory_Ordered__c</fullName>
        <description>Manually populated, indicates the amount of Inventory ordered from Suppliers/Vendors.</description>
        <inlineHelpText>Amount of Inventory ordered from Suppliers/Vendors.</inlineHelpText>
        <label>Inventory Ordered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Inventory__Inventory_Override__c</fullName>
        <description>Manually populated, used to override inventory quantity. Add a positive number to increase quantity available or add a negative number to decrease quantity available.</description>
        <inlineHelpText>Used to override inventory quantity. Add a positive number to increase quantity available or add a negative number to decrease quantity available.</inlineHelpText>
        <label>Inventory Override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Inventory__Inventory_Received__c</fullName>
        <description>Manually populated, indicates the amount of Inventory received from Suppliers/Vendors.</description>
        <inlineHelpText>Amount of Inventory received from Suppliers/Vendors.</inlineHelpText>
        <label>Inventory Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Inventory__Inventory_Returned__c</fullName>
        <description>Automatically populated, indicates the amount of Inventory returned to a Supplier/Vendor.</description>
        <inlineHelpText>Amount of Inventory received from Supplier/Vendor.</inlineHelpText>
        <label>Inventory Returned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Inventory__Inventory_Shipped__c</fullName>
        <description>Automatically populated, indicates the amount of Inventory shipped to customers.</description>
        <inlineHelpText>Amount of Inventory  shipped to customers.</inlineHelpText>
        <label>Inventory Shipped</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Inventory__Inventory_Sold__c</fullName>
        <description>Automatically populated, indicates the amount of Inventory which has been sold.</description>
        <inlineHelpText>Amount of Inventory which has been sold.</inlineHelpText>
        <label>Inventory Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <recordTypes>
        <fullName>rC_Giving__Item</fullName>
        <active>true</active>
        <description>Premium type representing a single benefit (e.g. a CD)</description>
        <label>Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>rC_Giving__Package</fullName>
        <active>true</active>
        <description>Premium type representing a group of benefits</description>
        <label>Package</label>
    </recordTypes>
</CustomObject>